--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-  <div id="contador">12</div>
+  <div id="contador"></div>
   <div id="juego">
     
     <div id="pj"></div>
