--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div id="tubo"></div>
     <div id="agujero"></div>
   </div>
-    
+  <div id="record"></div>
+  <div id="recordtitle">record</div> 
 
     <script src="juego.js"></script>
 </body>
