--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     
 </head>
 <body>
-  <div id="contador"></div>
+  <div id="contador">0</div>
   <div id="juego">
     
     <div id="pj"></div>
     <div id="tubo"></div>
     <div id="agujero"></div>
   </div>
-  <div id="record"></div>
+  <div id="record">0</div>
   <div id="recordtitle">record</div> 
 
     <script src="juego.js"></script>
